# UR5_Jazzy_Moveit2_Pick_Place

./: .gitignore  FINAL_SOLUTION_SUMMARY.txt  PROJECT_OVERVIEW.md  PROJET_ETAT.md  README.md  VALIDATION_REPORT.md  quick_validation.py
install/: local_setup.sh  setup.sh
install/hello_moveit/lib/hello_moveit/: hello_moveit
install/hello_moveit/share/hello_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/hello_moveit/share/hello_moveit/cmake/: hello_moveitConfig-version.cmake  hello_moveitConfig.cmake
install/hello_moveit/share/hello_moveit/environment/: ament_prefix_path.dsv  path.dsv
install/hri_manipulation/lib/hri_manipulation/: add_object  admittance_node  attach_object  detach_object  fake_object_pose  ik_node  jacobian_torque_node  pick_place_fsm  planar_arm  pose_sender
install/hri_manipulation/share/hri_manipulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5_controller/share/ur5_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur5_controller/share/ur5_controller/cmake/: ur5_controllerConfig-version.cmake  ur5_controllerConfig.cmake
install/ur5_controller/share/ur5_controller/config/: ros2_controllers.yaml
install/ur5_controller/share/ur5_controller/environment/: ament_prefix_path.dsv  path.dsv
install/ur5_controller/share/ur5_controller/launch/: controller.launch.py
install/ur5_description/share/ur5_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur5_description/share/ur5_description/cmake/: ur5_descriptionConfig-version.cmake  ur5_descriptionConfig.cmake
install/ur5_description/share/ur5_description/config/: ros2_gz_bridge.yaml  view_config.rviz
install/ur5_description/share/ur5_description/environment/: ament_prefix_path.dsv  path.dsv
install/ur5_description/share/ur5_description/launch/: gazebo.launch.py  rviz.launch.py
install/ur5_moveit/share/ur5_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur5_pick_place/lib/ur5_pick_place/: add_object  add_object_legacy  fake_object_pose  fake_object_pose_legacy  joint_state_pub  joint_state_pub_legacy  pick_place_node  pick_place_node_legacy  pose_sender  pose_sender_legacy  test_gripper  test_joints
install/ur5_pick_place/share/ur5_pick_place/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
scripts/: launch_pick_place_complete.sh
src/ur5_pick_place/: ARCHITECTURE.md  MIGRATION.md  QUICK_COMMANDS.md  README_V2.md  STATUS.md  package.xml  setup.py
src/ur5_pick_place/config/: ur5_pick_place_config.yaml
src/ur5_pick_place/launch/: pick_place.launch.py  pick_place_moveit2.launch.py  pick_place_v2.launch.py
src/ur5_pick_place/test/: test_validators.py
src/ur5_pick_place/ur5_pick_place/: add_object.py  async_pick_place_node.py  base_pick_place.py  config_loader.py  fake_object_pose.py  gripper_controller.py  hand_arm_controller.py  ik_solver.py  joint_state_publisher.py  joint_wave_demo.py  joint_wave_moveit.py  moveit_cartesian_demo.py  moveit_system_diagnostics.py  object_detector_node.py  pick_place_factory.py  pick_place_hybrid.py  pick_place_moveit.py  pick_place_moveit2.py  pick_place_moveit2_humble.py  pick_place_node.py  pick_place_node_v2.py  pick_place_ros2control.py  pick_place_state_machine.py  pose_sender.py  pose_sender_v2.py  rando.py  scene_config.yaml  test_corrections.py  test_gripper.py  test_ik_solver.py  test_joints.py  test_moveit.py  test_moveit_full_pipeline.py  test_moveit_levels.py  test_moveit_scene.py  test_scene_initialization.py  validators.py
src/ur5_ws/src/hello_moveit/: package.xml
src/ur5_ws/src/ur5_moveit/: package.xml
src/ur5_ws/src/ur5_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur5_robot.srdf
src/ur5_ws/src/ur5_moveit/launch/: moveit.launch.py
(+69 files in other folders)
