<?xml version="1.0"?>
<package format="3">
  <name>ur5_pick_place</name>
  <version>0.1.0</version>
  <description>UR5 Pick and Place with MoveIt2</description>
  <maintainer email="beingar@example.com">beingar</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
