<?xml version="1.0"?>
<package format="3">
  <name>ur5_pick_place</name>
  <version>2.0.0</version>
  <description>UR5 Pick and Place with MoveIt2 — Compatible ROS2 Humble</description>
  <maintainer email="beingar@example.com">beingar</maintainer>
  <license>Apache License 2.0</license>

  <!-- Core ROS2 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Actions -->
  <depend>action_msgs</depend>
  <depend>control_msgs</depend>

  <!-- MoveIt2 messages (disponibles sur Humble) -->
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>

  <!-- NOTE : moveit Python API non utilisée (réservée à Jazzy) -->
  <!-- NOTE : bibliothèques MoveIt C++ non requises pour un package Python  -->
  <!-- SUPPRIMÉ : rclpy_action (intégré dans rclpy depuis Humble)          -->

  <!-- Configuration -->
  <depend>pyyaml</depend>

  <!-- Visualisation -->
  <depend>rviz2</depend>

  <!-- Tests -->
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
